# jcvPCA_3layers

./: .gitignore  LAYER1_RAW_MARKER_QC_AUDIT_REPORT.md  LAYER2_5_CRITICAL_FIXES_IMPLEMENTATION_REPORT.md  LAYER2_5_PROGRAM_AUDIT_REPORT.md  README.md
Layer2.5_Segmentation/: 671_ex_segmentatios_frames.xlsx  POST_LAYER2_SEGMENTATION_NOTEBOOK_PLAN.md  POST_LAYER2_SEGMENTATION_NOTEBOOK_PLAN_DECISION_SCOPE_REVISED.md  README.md  pyproject.toml  requirements-dashboard.txt  requirements.txt
Layer2.5_Segmentation/config/: default_feature_scope.yaml  group4_upper_body_pilot_feature_manifest.csv
Layer2.5_Segmentation/dashboard/: dashboard_state.py  pre_jvcpca_dashboard.py
Layer2.5_Segmentation/data_description/: 671_T1_P1_R1_Take 2026-01-06 03.57.12 PM_001_DataDescriptions.csv  671_T3_P1_R1_Take 2026-02-03 08.05.01 PM_000_DataDescriptions.csv
Layer2.5_Segmentation/notebooks/: post_layer2_segmentation_review.ipynb  pre_jvcpca_review.ipynb
Layer2.5_Segmentation/outputs/: README.md  session_index.csv
Layer2.5_Segmentation/reevluate_project/: artifact_events.csv  gaps_over_0p2s.csv  qc_mask.csv  qc_mask_intervals.csv  revised_pre_jvcpca_review_tables.md
Layer2.5_Segmentation/scripts/: build_pilot_safety_report.py  build_pre_jvcpca_review.py  inspect_jvcpca_parquet.py  review_segmentation_window.py  run_pre_jvcpca_dashboard.sh  validate_pilot_export.py  validate_segmentation_inputs.py
Layer2.5_Segmentation/tests/: conftest.py  test_canonical_pilot_export.py  test_cli.py  test_dashboard_joint_state.py  test_display_tables.py  test_exercise_segments.py  test_layer2_5_critical_fixes.py  test_load_inputs.py  test_marker_family.py  test_notebook_review.py  test_notebook_ui.py  test_pre_jvcpca_review.py  test_qc_events.py  test_review_table_repair.py  test_schemas.py  test_validate_inputs.py  test_window_summary.py
Layer2_Motive_Kinematics/: .gitignore  02_LAYER2_STAGE_BY_STAGE_IMPLEMENTATION_SPEC.md  05_CODEX_COMPOSER_PROMPT.md  08_LAYER2_SPEC_V5_1_CORRECTION_ADDENDUM.md  KINEMATICS_REVIEWER_PROMPT.md  README.md  pyproject.toml
Layer2_Motive_Kinematics/configs/: default_layer2_config.yaml  parent_child_joint_map_template.csv  selected_body_joints_template.yaml
Layer2_Motive_Kinematics/data/: README.md
Layer2_Motive_Kinematics/docs/: 00_README_LAYER2_OVERVIEW.md  01_MOTIVE_CSV_STRUCTURE_AND_PARSER_REQUIREMENTS.md  03_OUTPUT_FOLDER_AND_REPORTING_CONTRACT.md  04_AGENT_STOP_AND_VALIDATE_PROTOCOL.md  06_IMPLEMENTATION_GUARDRAILS_AND_DEPENDENCIES.md  DECISION_LOG.md  (+10 more)
Layer3_JcvPCA/: README.md  backend_readiness_report.md  prompt_to_build_plan.md  pyproject.toml
(+849 files in other folders)
