[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "layer3-jcvpca"
version = "0.1.0"
description = "Layer 3 JcvPCA-style comparison of Motive-derived parent-child relative rotation-vector contribution structure (V1, Group 4 cross-repetition)."
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "scikit-learn>=1.3",
    "pyarrow>=12.0",
    "pyyaml>=6.0",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.scripts]
run-layer3-jcvpca = "layer3_jcvpca.runner:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
